fix: Compilation issues with error-prone on JDK16+
See: https://errorprone.info/docs/installation